# superannotate-python-sdk

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Dockerfile_dev  Dockerfile_dev_env  Dockerfile_prerelease  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_SENSORUM  README_cli.md  README_converters.md  README_sdk.md  docker-compose-dev.yml  docker-compose.yml  docker-compose_dev_env.yml  install.sh  install_dev_env.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_coco.txt  requirements_dev.txt  requirements_extra.txt  requirements_extra_linux.txt  requirements_prod.txt  run_dev_env_in_container.sh  saclient.py  setup.py  sonar-project.properties  test_setup.sh  (+1 more)
.devcontainer/: devcontainer.json
annotateonline/: __main__.py
docs/: requirements.txt
mixp/: decorators.py  parsers.py
sample_scripts/: apply_preannotation.py  pandas_df.ipynb
sensorum_tests/: test_sensorum_superannotate_flows.py
src/: .env  .pre-commit-config.yaml  pytest.ini  requirements.txt  setup.py  tox.ini
superannotate/: .dockerignore  __init__.py  __main__.py  annotation_helpers.py  api.py  common.py  dataframe_filtering.py  dicom_converter.py  exceptions.py  instance_filtering.py  old_to_new_format_convertor.py  parameter_decorators.py  version.py
tests/: __init__.py  attach_urls.csv  base.py  basic_auth_qa.py  common.py  config__wrong.json  conftest.py  convert_to_new_format.py  debug_many.py  test_annotation_adding.py  test_annotation_class_new.py  (+56 more)
(+1653 files in other folders)
