[tool.poetry]
name = "superannotate"
version = "0.2.0" 
description = "Python SDK to SuperAnnotate platform"
authors = ["SuperAnnotate AI <support@superannotate.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/superannotateai/superannotate-python-sdk"
documentation = "https://superannotate.readthedocs.io/en/stable/"
homepage = "https://github.com/superannotateai/superannotate-python-sdk"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
aiohttp = "^3.8"
boto3 = "^1.26"
opencv-python = "^4.7"
packaging = "^23.1"
plotly = "^5.14"
email-validator = "^1.0"
pandas = "^1.3"
ffmpeg-python = "~0.2"
pillow = "^10.0.1"
tqdm = "^4.66"
requests = "^2.31"
aiofiles = "^23.1"
fire = "^0.4"
mixpanel = "^4.8"
jsonschema = "^4.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
wheel = "*"

[tool.poetry.scripts]
superannotatecli = "superannotate.lib.app.bin.superannotate:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
